--- a/o365c-plugin-projecttracker/ProjectTracker/.gitignore
+++ b/o365c-plugin-projecttracker/ProjectTracker/.gitignore
@@ -1,6 +1,6 @@
 # TeamsFx files
 env/.env.*.user
-env/.env.local
+#env/.env.local
 .localConfigs
 .localConfigs.testTool
 .notification.localstore.json
